# QtTraining

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tictactoe.cpp  tictactoe.h  tictactoe.ui
lessons/: lesson1.cpp  lesson1.h  lesson1.ui  lesson2.cpp  lesson2.h  lesson2.ui  lesson3.cpp  lesson3.h  lesson3.ui  lesson4.cpp  lesson4.h  lesson4.ui  lesson4_qtable.sql  lesson5.cpp  lesson5.h  lesson5.ui
lessons/models/: userl3.h  userl3model.cpp  userl3model.h
